fix: fix some step alignment

--- a/src/app/features/onboarding/components/OnboardingStepStartLayout/OnboardingStepStartLayout.module.scss
+++ b/src/app/features/onboarding/components/OnboardingStepStartLayout/OnboardingStepStartLayout.module.scss
@@ -45,7 +45,7 @@
         grid-template-rows: 1fr;
         grid-template-areas: 'text image';
         margin: 0 10%;
-        height: 100%;
+        min-height: calc(100vh - 160px);
         gap: 40px;
     }
 
